# dinnerlog

./: Cargo.toml  Makefile  README.md  docker-compose.yml
assets/: theme.toml
db_fixtures/: development.sql
db_migrations/: 000_base.sql
src/: main.rs  sql.rs
