[package]
name = "dinnerlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.20.0", features = ["toml"] }
lazy_static = "1.4.0"
log = "0.4.19"
mysql = "24.0.0"
time = { version = "0.3.23", features = ["macros"] }
uuid = { version = "1.4.0", features = ["v4"] }
